gitops/apps/obs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: obs
  labels:
    app.kubernetes.io/name: obs
    app.kubernetes.io/part-of: platform-gitops
